Working with promocoes section, align to center and make responsive. Some bugs to fix.

--- a/css/style.css
+++ b/css/style.css
@@ -32,3 +32,12 @@ footer p {
     padding-top: 25px;
     padding-bottom: 40px;
 }
+
+.centered {
+    margin: 0 auto !important;
+    float: none !important;
+}
+
+button .active {
+    background-color: yellow;
+}
